--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "rpos",
   "main": "rpos.js",
   "license": "MIT",
+  "scripts": {
+    "test": "ts-node test/soapService.test.ts"
+  },
   "author": {
     "name": "Jeroen Versteege",
     "email": "jeroen@versteege.com"
@@ -44,6 +47,7 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^5.0.1",
     "gulp-zip": "^5.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.3.2"
   }
 }
