--- a/rposConfig.sample-testfile.json
+++ b/rposConfig.sample-testfile.json
@@ -5,7 +5,12 @@
   "Username" : "admin",
   "Password" : "admin",
   "CameraType" : "testsrc",
-  "CameraDevice" : "",
+  "CameraDevice" : "/home/pi/sample.mp4",
+  "TestSrc": {
+    "Preset": "720p",
+    "Framerate": 25,
+    "Pattern": "file"
+  },
   "RTSPAddress" : "", "//":"Normally left blank. Used to set RTSP Server Address",
   "RTSPPort" : 8554,
   "RTSPName" : "h264",
