--- a/rposConfig.sample-testfile.json
+++ b/rposConfig.sample-testfile.json
@@ -31,5 +31,6 @@
     "HardwareId" : ""
   },
   "logLevel" : 3, "logLevelComment": "## LogLevels are > 1:Error 2:Warning 3:Info 4:Debug",
-  "logSoapCalls" : false
+  "logSoapCalls" : false,
+  "AuthDebug": true, "AuthDebugComment": "## Set to false to suppress [AuthDebug] authentication logs"
 }
