--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "https://github.com/Breeeze/rpos.git"
   },
   "dependencies": {
+    "@serialport/stream": "^13.0.0",
     "body-parser": "1.19.0",
     "cli-color": "2.0.0",
     "express": "^4.17.1",
@@ -30,7 +31,6 @@
     "node-uuid": "1.4.8",
     "pan-tilt-hat": "^1.2.1",
     "rpi-version": "^1.4.3",
-    "serialport": "^12.0.0",
     "soap": "https://github.com/BreeeZe/node-soap.git",
     "tenx-usb-missile-launcher-driver": "^0.2.0",
     "xml2js": "0.4.23"
