--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "rpos.js",
   "license": "MIT",
   "scripts": {
-    "test": "ts-node test/soapService.test.ts"
+    "test": "jest --runInBand",
+    "build": "gulp"
   },
   "author": {
     "name": "Jeroen Versteege",
@@ -39,14 +40,18 @@
     "@types/body-parser": "^1.19.0",
     "@types/cli-color": "^2.0.0",
     "@types/express": "^4.17.11",
+    "@types/jest": "^29.5.14",
     "@types/node": "^13.1.5",
     "@types/node-uuid": "0.0.28",
     "@types/xml2js": "^0.4.8",
     "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^5.0.1",
     "gulp-zip": "^5.1.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
   }
