--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "removeComments": true,
         "preserveConstEnums": false,
         "sourceMap": true,
-        "watch": false
+        "watch": false,
+        "types": ["node", "jest"]
     }
 }
