--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "ip": "^2.0.1",
     "macos-release": "~3.2.0",
     "node-pelcod": "^0.3.0",
-    "uuid": "10.0.0",
     "pan-tilt-hat": "^1.2.1",
     "rpi-version": "^1.4.3",
     "serialport": "^12.0.0",
     "soap": "^1.0.4",
+    "source-map": "0.6.1",
     "tenx-usb-missile-launcher-driver": "^0.2.0",
+    "uuid": "10.0.0",
     "xml2js": "0.6.2"
   },
   "devDependencies": {
@@ -45,7 +46,7 @@
     "gulp": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
+    "gulp-typescript": "5.0.1",
     "gulp-zip": "^6.0.0",
     "typescript": "^5.5.2"
   }
