--- a/rposConfig.sample-picam.json
+++ b/rposConfig.sample-picam.json
@@ -25,5 +25,7 @@
     "HardwareId" : ""
   },
   "logLevel" : 3, "logLevelComment": "## LogLevels are > 1:Error 2:Warning 3:Info 4:Debug",
-  "logSoapCalls" : false
+  "logSoapCalls" : false,
+  "authDebug" : false,
+  "authDisable" : false
 }
